# home-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  demo.sh  docker-compose.yml  home-agent-1.drawio  home-agent-2.drawio  package-lock.json  pyproject.toml  start_services.py  uv.Dockerfile
PIPER-SRC/: Dockerfile  README-AI.md  piper_server.py  talk-test.html
docker/: home-agent.sh  home-page.sh  hubitat-agent.sh  hubitat-mcp.sh
home-page/: .gitignore  generate-cert.sh  index.html  node.Dockerfile  package-lock.json  package.json  vite.config.js
home-page/public/: manifest.json  stt.html  sw.js
home-page/src/: a2a.js  configure_repeaker.py  main.js  stt.js  style.css  tts.js  ui.js
nginx/: Dockerfile  README.md  docker-entrypoint.sh  generate-ssl-cert.sh  nginx.conf
src/: __init__.py  hubitat.py  hubitat_a2a.py
src/agents/: home_a2a.py  hubitat_a2a.py  llm_provider.py
src/mcp/: hubitat_mcp.py
