[project]
name = "home_agent"
version = "0.1.0"
description = "Local AI agent using Strands with Ollama"
requires-python = ">=3.12"

dependencies = [
    "strands-agents[a2a,ollama,openai]==1.9.0",
    "strands-agents-tools[a2a_client, mcp]==0.2.8",
    "python-dotenv",
    "SpeechRecognition",
    "PyAudio",
    "mcp>=1.12.3",
    "fastmcp>=1.0",
    "requests>=2.32.4",
]

[project.scripts]
home-agent = "src.agents.home_a2a:main"
hubitat-agent = "src.agents.hubitat_a2a:main"
hubitat-mcp = "src.mcp.hubitat_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
